knote-chart/templates/ingresss.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: knote-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knote
  namespace: knote-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: module.acm.acm_certificate_arn
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
        {
            "Type": "redirect",
            "RedirectConfig": {
                "Protocol": "HTTPS",
                "Port": "443",
                "Host": "#{host}",
                "Path": "/#{path}",
                "Query": "#{query}",
                "StatusCode": "HTTP_301"
            }
        }
spec:
  ingressClassName: alb
  rules:
    - host: www.hederdevops.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: knote
                port:
                  number: 80
